--- a/beaute.css
+++ b/beaute.css
@@ -35,8 +35,17 @@ h1
     margin-bottom : 50px;
 }
 
-/*ne marche pas*/
-.bouton
+/*A revoir*/
+/*.bouton
+{
+    text-decoration: none;
+    color:white;
+    background-color: rgb(28, 84, 158);
+    border-radius:10px;
+    padding:5px;
+}
+
+.bouton:hover
 {
     text-decoration: none;
     color:white;
@@ -44,18 +53,10 @@ h1
     border-radius:10px;
 }
 
-a, .bouton:hover
+.bouton:visited
 {
     text-decoration: none;
     color:white;
     background-color: rgb(28, 84, 158);
     border-radius:10px;
-}
-
-a, .bouton:visited
-{
-    text-decoration: none;
-    color:white;
-    background-color: rgb(28, 84, 158);
-    border-radius:10px;
-}
+}*/
