--- a/beaute.css
+++ b/beaute.css
@@ -92,6 +92,10 @@ fieldset
     border-radius: 10%;
     border : solid rgb(28, 84, 158);
 }
+a .btn-secondary
+{
+    color : white !important;
+}
 .btn-primary
 {
     size : 200px;
